[tool.poetry]
name = "duplicate_images"
version = "0.6.4a"
description = "Finds equal or similar images in a directory containing (many) image files"
authors = ["Lene Preuss <lene.preuss@gmail.com>"]
repository = "https://github.com/lene/DuplicateImages.git"
homepage = "https://github.com/lene/DuplicateImages"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8.5"
Wand = "^0.6.5"
pillow = "^9.0.1"
imagehash = "^4.3.0"
coloredlogs = "^15.0"
tqdm = "^4.64.1"
pillow-heif = "^0.7.0"
six = "^1.16.0"
numpy = "^1.23"

[tool.poetry.dev-dependencies]
lz4 = "^4.0.2"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-quotes = "^3.3.1"
Wand = "^0.6.5"
pytest = "^7.1.2"
pylint = "^2.15.3"
pytest-xdist = "^2.2.1"
ptpython = "^3.0.20"

[tool.poetry.scripts]
find-dups = "duplicate_images.duplicate:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
